--- a/dz11/css/media.css
+++ b/dz11/css/media.css
@@ -52,7 +52,7 @@
 		position: absolute;
 		width: 160px;
 	    right: 20px;
-    	top: 58px;
+    	top: 69px;
     	background: #e5e6e8;
 	    box-shadow: 0 0 0 4px rgba(88, 100, 122, 0.086);
 	    padding: 10px;
@@ -78,14 +78,17 @@
 		background-position: left center;
 	}
 	.nav {
-    	top: 53px;
-    	right: 10px;
+    	top: 65px;
+    	right: 5px;
 	}
 	.logo-footer {
 		margin: 40px auto 0;
 	}
 	.footer__texts {
 		margin-left: 35px;
+	}
+	.page-nav {
+		flex-wrap: wrap;
 	}
 }
 
@@ -99,6 +102,9 @@
 	}
 	h4 {
 		font-size: 20px;
+	}
+	.header {
+		padding: 10px 0 0;
 	}
 	.invite {
 		margin-top: -110px;
@@ -153,7 +159,14 @@
 		margin-left: auto;
 	}
 	.nav {
-    	top: 25px;
-    	right: 15px;
+    	top: 41px;
+    	right: 20px;
+	}
+	.page-nav {
+		flex-direction: column;
+	}
+	.page-nav__item {
+		margin: 0;
+		text-align: center;
 	}
 }
