--- a/dz11/css/main.css
+++ b/dz11/css/main.css
@@ -233,7 +233,6 @@ button:active {
 
 .pagination {
 	background: #3a4456;
-	border-radius: 0;
 	padding-top: 40px;
 	letter-spacing: 0;
 }
@@ -431,7 +430,7 @@ button:active {
 	display: block;
 	padding: 9px 14px;
 	border: 2px solid rgba(184, 28, 49, 0);
-	border-radius: 5%;
+	border-radius: 5px;
 	font-family: 'Museo Sans 700', sans-serif;
 	font-size: 16px;
 	color: #a1a6af;
@@ -771,4 +770,108 @@ button:active {
 	font-size: 10.4px;
 }
 
-/* ----- About ----- */
+/* ----- About Page----- */
+/* ----- Advantages ----- */
+
+.advantages {
+	letter-spacing: 0.02em;
+	padding: 53px 0 50px;
+}
+
+.advantages__title {
+	width: 80%;
+	letter-spacing: 0.02em;
+}
+
+.advantages__texts {
+	margin-top: 30px;
+	padding-bottom: 52px;
+	font-size: 15px;
+	border-bottom: 2px solid #e5e6e8;
+}
+
+.advantages__text {
+	max-width: 565px;
+}
+
+
+.advantage {
+	padding: 35px 0 0;
+}
+
+.advantage:after {
+	display: block;
+	content: '';
+	width: 82%;
+	height: 2px;
+	margin-top: 33px;
+	background: #e5e6e8;
+}
+
+.advantage__icon {
+	width: 60px;
+	height: 60px;
+	margin: 4px 35px 0 3px;
+	border-radius: 50%;
+	border: 2px solid #102e62;
+	background: url('../img/about/scales-icon.png') no-repeat center center;
+}
+
+.advantage__texts {
+	max-width: 1070px;
+}
+
+.advantage__title {
+	font-size: 18.3px;
+	letter-spacing: 0.02em;
+}
+
+.advantage__text {
+
+margin-top: 17px;
+}
+
+/* ----- Gelery ----- */
+
+.galery {
+	padding-bottom: 70px;
+}
+
+.galery__title {
+	letter-spacing: 0.02em;
+}
+
+.galery__items {
+	margin-top: 40px;
+}
+
+.galery__item {
+	position: relative;
+}
+
+.galery__item:hover .galery__overlay {
+	opacity: 1;
+}
+
+.galery__overlay {
+	opacity: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	background: rgba(58, 68, 86, 0.69);
+	border: 7px solid #9a97a7;
+	color: #fff;
+	font-size: 29px;
+	transition: all 0.5s ease;
+	cursor: pointer;
+}
+
+.arrow-icon {
+	transform: rotate(45deg);
+}
+
+.expand-icon {
+	display: none;
+}
