--- a/dz11/css/main.css
+++ b/dz11/css/main.css
@@ -481,7 +481,7 @@ button:active {
 
 }
 
-.invite__links {
+.social_invite {
 	width: 166px;
 	height: 46px;
 	margin-left: 5px;
@@ -492,56 +492,54 @@ button:active {
 	box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.66);
 }
 
-.invite__link {
+.social__link {
 	opacity: 1;
 	width: 30px;
 	height: 30px;
 	font-size: 17px;
 	text-align: center;
 	line-height: 27px;
-}
-
-.invite__link_fb {
-	color: #3d6ca8;
-	border: 2px solid ;
-}
-
-.invite__link_tw {
-	color: #43c9fd;
 	border: 2px solid;
 }
 
-.invite__link_tg {
+.social__link_fb {
+	color: #3d6ca8;
+}
+
+.social__link_tw {
+	color: #43c9fd;
+}
+
+.social__link_tg {
 	color: #25a3d4;
-	border: 2px solid;
 }
 
-.invite__link_fb:hover {
+.social__link_fb:hover {
 	color: #3d6ca8;
 	filter: brightness(0.75);
 }
 
-.invite__link_tw:hover {
+.social__link_tw:hover {
 	color: #43c9fd;
 	filter: brightness(0.75);
 }
 
-.invite__link_tg:hover {
+.social__link_tg:hover {
 	color: #25a3d4;
 	filter: brightness(0.75);
 }
 
-.invite__link_fb:active {
+.social__link_fb:active {
 	color: #3d6ca8;
 	filter: brightness(1.25);
 }
 
-.invite__link_tw:active {
+.social__link_tw:active {
 	color: #43c9fd;
 	filter: brightness(1.25);
 }
 
-.invite__link_tg:active {
+.social__link_tg:active {
 	color: #25a3d4;
 	filter: brightness(1.25);
 }
@@ -874,4 +872,118 @@ margin-top: 17px;
 
 .expand-icon {
 	display: none;
+}
+
+/* ----- Loc ----- */
+
+.loc {
+	position: relative;
+}
+
+#map {
+	width: 100%;
+	height: 443px;
+}
+
+.place {
+	position: absolute;
+	width: 470px;
+	padding: 20px 35px 52px 30px;
+    left: 715px;
+    top: -397px;
+	color: #fff;
+	background: rgba(88, 100, 122, 0.75);
+	border-radius: 5px;
+
+}
+.place:before {
+	content: '';
+	display: block;
+	background: url('../img/contacts/triangle.png');
+	width: 23px;
+	height: 46px;
+	position: absolute;
+	left: -23px;
+    top: 15px;
+}
+.place__head {
+	padding-bottom: 18px;
+	border-bottom: 2px solid rgba(255, 255, 255, 0.22);
+}
+
+.place__title {
+	color: #fff;
+	letter-spacing: 0.02em;
+	margin-top: 5px;
+}
+
+.social_place {
+	width: 131px;
+}
+
+.social__link_place {
+	color: #fff;
+}
+
+.place__body {
+	margin-top: 45px;
+	letter-spacing: 0;
+}
+
+.place__contacts {
+	width: 200px;
+	font-size: 16px;
+	margin-left: 6px;
+}
+
+.place__link {
+	color: #fff;
+}
+
+.place__phones {
+	margin-bottom: 23px;
+}
+
+.place__phone {
+	display: block;
+	margin-bottom: 3px;
+}
+
+.place__address {
+	margin-bottom: 20px;
+}
+
+.place__address-icon {
+	display: block;
+	margin-top: 3px;
+	margin-right: 8px;
+}
+
+.place__adress-text {
+
+}
+
+.place__mail-icon {
+	margin-left: 4px;
+	line-height: 26px;
+	margin-right: 4px;
+}
+
+.place__mail {
+
+}
+
+.place__texts {
+	width: 185px;
+	font-size: 12px;
+	opacity: 0.75;
+}
+
+.place__text {
+	margin-bottom: 18px;
+}
+
+.place__phone-icon_mirror {
+	margin-right: 1px;
+    transform: rotate(90deg);
 }
