absolute blocks fix position

--- a/dz11/css/main.css
+++ b/dz11/css/main.css
@@ -889,7 +889,7 @@ margin-top: 17px;
 	position: absolute;
 	width: 470px;
 	padding: 20px 35px 52px 30px;
-    left: 715px;
+    right: 19.25%;
     top: -397px;
 	color: #fff;
 	background: rgba(88, 100, 122, 0.75);
