--- a/dz11/css/main.css
+++ b/dz11/css/main.css
@@ -234,41 +234,48 @@ button:active {
 }
 .callback-block {
 	display: none;
+    position: relative;
+    height: 100%;
+    width: 100%;
 }
 
 .callback {
 	display: none;
-	position: absolute;
-	max-width: 300px;
-	padding: 20px;
+	position: fixed;
+	width: 412px;
+	padding: 50px;
 	left: 50%;
-	background: rgba(255, 255, 255, 0.9);
-	transform: translateX(-50%);
-	border: 1px solid rgba(88, 95, 107, 0.17);
+	top: 50%;
+	background: #fff;
+	transform: translateX(-50%) translateY(-50%);
     border-radius: 5px;
     z-index: 6;
+    text-align: center;
 }
 
 .callback__title {
 	text-align: center;
-	font-size: 26px;
-	margin-bottom: 20px;
+	font-size: 21px;
+	margin-bottom: 15px;
 }
 
 .callback__input {
 	display: block;
 	margin: 5px auto 15px;
-	width: 260px;
+	width: 308px;
 	height: 40px;
 	font-family: 'Museo Sans 300', sans-serif;
-	color: #000;
-	padding-left: 10px;
+	color: #404048;
+	background: transparent;
+	border: none;
+	border-bottom: 1px solid rgba(33, 37, 63, 0.62);
+	padding: 15px 0;
 }
 
 .callback__text {
 	font-size: 13px;
 	text-align: center;
-	width: 260px;
+	width: 308px;
 	color: #212121;
 	display: block;
 	margin: 0 auto 15px;
@@ -277,8 +284,9 @@ button:active {
 .callback__btn {
 	display: block;
 	padding: 7px 0 8px;
-	margin: 0 auto;
+	margin: 30px auto 0;
 	font-size: 13px;
+	width: 308px;
 }
 
 .callback-block__bg {
@@ -287,7 +295,7 @@ button:active {
 	left: 0;
 	top: 0;
 	bottom: 0;
-	background: rgba(0, 0, 0, 0.5) url(../img/close.png) no-repeat right 10px top 10px;
+	background: rgba(19, 23, 49, 0.93);
 	z-index: 5;
 	cursor: pointer;
 }
